# arc_dev_kit

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  Makefile  README.md  ROADMAP.md  SESSION_SUMMARY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
arc_devkit/: __init__.py  config.py
arc_devkit/agents/: __init__.py  async_base.py  async_monitor.py  base_agent.py  monitor_agent.py  payment_agent.py
arc_devkit/analytics/: __init__.py  portfolio.py
arc_devkit/api/: __init__.py  main.py
arc_devkit/api/routes/: __init__.py  agents.py  copilot.py  debugger.py
arc_devkit/cli/: __init__.py  flat.py  main.py
arc_devkit/cli/commands/: __init__.py  agent.py  copilot.py  debug.py
arc_devkit/contracts/: __init__.py  loader.py
arc_devkit/copilot/: __init__.py  agent.py
arc_devkit/core/: __init__.py  connection.py  gas.py  wallet.py
arc_devkit/debugger/: __init__.py  tx_analyzer.py
arc_devkit/deploy/: __init__.py  deployer.py
arc_devkit/events/: __init__.py  listener.py
arc_devkit/usdc/: __init__.py  token.py
docs/: api-reference.md  cli-guide.md  cookbook.md  getting-started.md  index.md  migration-rpc.md
docs/modules/: agent-starter-kit.md  analytics.md  dev-copilot.md  tx-debugger.md
examples/: 01_check_connection.py  02_copilot_ask.py  03_estimate_gas.py  04_monitor_wallet.py  05_debug_tx.py
playground/: README.md  arc_cli.py  arc_codegen.py  arc_explorer.py  demo_cli.sh  requirements.txt
tests/: conftest.py  test_agents.py  test_analytics.py  test_api.py  test_async_agents.py  test_cli.py  test_connection.py  test_contracts.py  test_copilot.py  test_debugger.py  test_deploy.py  test_events.py  test_integration.py  test_usdc.py
website/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  page.tsx
website/app/docs/: layout.tsx
website/app/docs/[...slug]/: page.tsx
website/components/: DocsLayout.tsx  Footer.tsx  Header.tsx  LanguageProvider.tsx  Logo.tsx  MDXComponents.tsx  Sidebar.tsx
website/content/docs/: cli-reference.mdx  configuration.mdx  contributing.mdx  cookbook.mdx  examples.mdx  getting-started.mdx  introduction.mdx  rest-api.mdx  websocket.mdx
website/content/docs/en/: cli-reference.mdx  configuration.mdx  contributing.mdx  cookbook.mdx  examples.mdx  getting-started.mdx  introduction.mdx  rest-api.mdx  websocket.mdx
website/content/docs/en/modules/: async-monitor.mdx  contract-deployer.mdx  contracts.mdx  dev-copilot.mdx  event-listener.mdx  monitor-agent.mdx  payment-agent.mdx  portfolio-analyzer.mdx  tx-debugger.mdx  usdc-token.mdx
website/content/docs/modules/: async-monitor.mdx  contract-deployer.mdx  contracts.mdx  dev-copilot.mdx  event-listener.mdx  monitor-agent.mdx  payment-agent.mdx  portfolio-analyzer.mdx  tx-debugger.mdx  usdc-token.mdx
website/lib/: actions.ts  docs.ts  i18n.ts  nav.ts  utils.ts
