[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-devkit"
version = "0.4.2"
description = "Plataforma open source de ferramentas para desenvolvedores da Arc blockchain (Circle)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jeielsantosdev", email = "jeielsantos.ti@gmail.com" }
]
requires-python = ">=3.11"
keywords = ["arc", "blockchain", "circle", "usdc", "web3", "ai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    # CLI e saída formatada
    "typer[all]>=0.12",
    "rich>=13.7",
    # API REST
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "slowapi>=0.1.9",
    "sse-starlette>=2.1",
    # Blockchain
    "web3>=7.0",
    # IA — SDK oficial Anthropic
    "anthropic>=0.40",
    # Utilitários
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "tenacity>=8.0",
]

[project.urls]
Homepage = "https://github.com/Jeielsantosdev/arc-devkit"
Repository = "https://github.com/Jeielsantosdev/arc-devkit"
"Bug Tracker" = "https://github.com/Jeielsantosdev/arc-devkit/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.6",
    "mypy>=1.8",
    # httpx já está nas deps principais; listado aqui para clareza nos testes
    "httpx>=0.27",
]

[project.scripts]
# CLI agrupada: `arcdevkit copilot ask`, `arcdevkit agent pay`, etc.
arcdevkit = "arc_devkit.cli.main:app"
# CLI direta: `arc status`, `arc ask`, `arc balance`, `arc codegen`, etc.
arc = "arc_devkit.cli.flat:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["arc_devkit*"]

# ---------------------------------------------------------------------------
# Ruff — linter e formatador
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/F/W = erros e avisos pycodestyle/pyflakes
# I     = ordenação de imports (isort)
# UP    = modernização de sintaxe Python (pyupgrade)
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",  # linhas longas — controlado pelo formatter, não pelo linter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: testes que requerem conexão real com a Arc testnet (pulados no CI padrão)",
]
addopts = "--cov=arc_devkit --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    # Old grouped CLI — covered indirectly; stub tests prevent 0% noise
    "arc_devkit/cli/commands/*",
    "arc_devkit/cli/main.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@abstractmethod",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Third-party stubs are incomplete; allow untyped calls from web3/anthropic
disallow_untyped_defs = false
check_untyped_defs = true
